--- a/style.css
+++ b/style.css
@@ -2,8 +2,17 @@ body {
     font-family: 'Noto Sans', sans-serif;
 }
 
+body::before {
+    display: block;
+    content: '';
+    height: 148px;
+  }
+
 @media only screen and (max-width: 992px) {
     .input-group{
         width: 100%!important;
     }
+    body::before {
+        height: 92.422px;
+      }
   }
